Version 1.10.3 - Hyacinthe
-----------------------------
  - Fixes to MicroTiny when theme uses dark background colors
  - Fixes to MicroTiny problems in various modes
  - Minor documentation fix in contentoperations
  - Fixes to cms_stylesheet plugin regular expressions
  - Fixes to cms_http_request
  - Fixes to cms_selflink
  - Fixes problem with login when homepage is set.
  - Minor enhancement to the setlocale stuff.

Version 1.10.2 - Casa Pilote
-----------------------------
Core - Bug Reports:
  - #7111 ordered lists in backend
  - #7112 Missing content-type in printing module (CMSPrinting)
  - #7172 (cms_selflink encoding the urlparam stuff).
  - adds force_root_block to MicroTiny.
  - Fixes a problem with page alias when it was cleared in editcontent
  - Fixes a minor problem with copycontent
  - Fixes problem with filters not being loaded.
  - Fixes to package generation scripts... all english variants are packaged together now.
  - Some minor template changes to MicroTiny filepicker
  - Change the way file sizes are displayed in MicroTiny filepicker.

Version 1.10.1 - Le Lorrain
-----------------------------
  - Fixed a problem with improper HTTPS detection in the metadata plugin
  - Fixed a problem with modules not being loaded properly for admin stylesheets
  - Fixed a minor problem with microtinyconfig
  - Fixed a minor issue in event handlers.
  - Adds one more error check into MenuManager wrt to GetContent on inactive objects.
  - Fixes a problem with GetAllContent() which effects the parent dropdown stuff.
  - Fixes a problem with deleting inactive content.
  - Fixes the summary modifier.
  - Replaces the cms_tree_operations::load_from_list() method with a simpler, recursive function.
  - Minor optimizations to the cms_content_cache class to reduce database queries when there are deactivated pages.
  - Inactive pages now show up in order content, and in a different color.
  - ModuleManager - minor improvement to the is_connection_ok method.