@@ -2,6 +2,7 @@ Version 1.10.3 - Hyacinthe
 -----------------------------
   - Fixes to MicroTiny when theme uses dark background colors
   - Fixes to MicroTiny problems in various modes
+  - Fixes to MicroTiny styles dropdown.
   - Minor documentation fix in contentoperations
   - Fixes to cms_stylesheet plugin regular expressions
   - Fixes to cms_http_request
